# rosa_msgs

./: .gitignore  LICENSE  README.md
rosa_msgs/: CMakeLists.txt  package.xml
rosa_msgs/msg/: AttentionVisual.msg  Body.msg  Cube.msg  CubeAction.msg  Detection.msg  Detections.msg  Environment.msg  FacialData.msg  FacialHeader.msg  HandBox.msg  Joint.msg  ProjectionObject.msg  RobotAction.msg  UserData.msg
