<?xml version="1.0"?>
<package>
  <name>rosa_msgs</name>
  <version>0.0.1</version>
  <description>RoSa Messages</description>
  <maintainer email="dominykas.strazdas@ovgu.de">Dominykas Strazdas</maintainer>
  <license>MIT</license>
  <url type="website">http://www.nit.ovgu.de/Mitarbeiter/Dominykas+Strazdas.html</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
